Made navbar fixed but static when the hamburger icon is present and allowed the collapse to work properly if the hamburger icon is visible as well.

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,4 +1,6 @@
-﻿.pointer
-{
+﻿body {
+    padding-top: 50px;
+}
+.pointer {
     cursor:pointer;
 }
